Subscription Friendship ++ fix and clean