@@ -15,19 +15,21 @@ public class CategoryMapper {
 
     public CategoryDto toDto(Category category) {
         if (category == null) return null;
-
         CategoryDto dto = new CategoryDto();
         dto.setId(category.getId());
         dto.setName(category.getName());
         dto.setDescription(category.getDescription());
         dto.setImageUrl(category.getImageUrl());
-        dto.setAuthor(category.getAuthor());
+        if (category.getAuthor() != null) {
+            dto.setAuthorId(category.getAuthor().getId());
+            dto.setAuthorName(category.getAuthor().getName());
+        }
 
         if (category.getPlaces() != null) {
             List<Long> placeIds = category.getPlaces()
                     .stream()
                     .map(Place::getId)
-                    .collect(Collectors.toList());
+                    .toList();
             dto.setPlaceIds(placeIds);
         } else {
             dto.setPlaceIds(Collections.emptyList());
@@ -44,21 +46,20 @@ public class CategoryMapper {
         category.setName(dto.getName());
         category.setDescription(dto.getDescription());
         category.setImageUrl(dto.getImageUrl());
-        category.setAuthor(dto.getAuthor());
-
         return category;
     }
 
     public List<CategoryDto> toDtoList(List<Category> categories) {
         if (categories == null) return Collections.emptyList();
-
         return categories.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Set<Category> toEntityList(Set<CategoryDto> dtos) {
         if (dtos == null) return Collections.emptySet();
-        return dtos.stream().map(this::toEntity).collect(Collectors.toSet());
+        return dtos.stream()
+                .map(this::toEntity)
+                .collect(Collectors.toSet());
     }
 }
